Updated for MixinTale 3.0.0